--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="content">
         <section class="search-engine-optimization">
           <img
-            src="./assets/images/search-engine-optimization.jpg"
+            src="/assets/images/search-engine-optimization.jpg"
             class="float-left"
           />
           <h2>Search Engine Optimization</h2>
@@ -46,7 +46,7 @@
           class="online-reputation-management"
         >
           <img
-            src="./assets/images/online-reputation-management.jpg"
+            src="/assets/images/online-reputation-management.jpg"
             class="float-right"
           />
           <h2>Online Reputation Management</h2>
@@ -60,7 +60,7 @@
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
           <img
-            src="./assets/images/social-media-marketing.jpg"
+            src="/assets/images/social-media-marketing.jpg"
             class="float-left"
           />
           <h2>Social Media Marketing</h2>
@@ -76,7 +76,7 @@
         <article class="benefit-lead">
           <h3>Lead Generation</h3>
           <img
-            src="./assets/images/lead-generation.png"
+            src="/assets/images/lead-generation.png"
             alt="lead-generation funnel"
           />
           <p>
@@ -86,10 +86,7 @@
         </article>
         <article class="benefit-brand">
           <h3>Brand Awareness</h3>
-          <img
-            src="./assets/images/brand-awareness.png"
-            alt="brand-awareness"
-          />
+          <img src="/assets/images/brand-awareness.png" alt="brand-awareness" />
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -97,10 +94,7 @@
         </article>
         <article class="benefit-cost">
           <h3>Cost Management</h3>
-          <img
-            src="./assets/images/cost-management.png"
-            alt="cost-management"
-          />
+          <img src="/assets/images/cost-management.png" alt="cost-management" />
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
