--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Horiseo</title>
   </head>
 
@@ -28,9 +28,12 @@
     <div class="hero"></div>
     <main>
       <section class="content">
-        <section class="search-engine-optimization">
+        <section
+          id="search-engine-optimization"
+          class="search-engine-optimization"
+        >
           <img
-            src="/assets/images/search-engine-optimization.jpg"
+            src="assets/images/search-engine-optimization.jpg"
             class="float-left"
           />
           <h2>Search Engine Optimization</h2>
@@ -46,7 +49,7 @@
           class="online-reputation-management"
         >
           <img
-            src="/assets/images/online-reputation-management.jpg"
+            src="assets/images/online-reputation-management.jpg"
             class="float-right"
           />
           <h2>Online Reputation Management</h2>
@@ -60,7 +63,7 @@
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
           <img
-            src="/assets/images/social-media-marketing.jpg"
+            src="assets/images/social-media-marketing.jpg"
             class="float-left"
           />
           <h2>Social Media Marketing</h2>
@@ -76,7 +79,7 @@
         <article class="benefit-lead">
           <h3>Lead Generation</h3>
           <img
-            src="/assets/images/lead-generation.png"
+            src="assets/images/lead-generation.png"
             alt="lead-generation funnel"
           />
           <p>
@@ -86,7 +89,7 @@
         </article>
         <article class="benefit-brand">
           <h3>Brand Awareness</h3>
-          <img src="/assets/images/brand-awareness.png" alt="brand-awareness" />
+          <img src="assets/images/brand-awareness.png" alt="brand-awareness" />
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -94,7 +97,7 @@
         </article>
         <article class="benefit-cost">
           <h3>Cost Management</h3>
-          <img src="/assets/images/cost-management.png" alt="cost-management" />
+          <img src="assets/images/cost-management.png" alt="cost-management" />
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
