--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Horiseon</title>
   </head>
-
   <body>
     <header>
       <h1>Hori<span class="seo">seo</span>n</h1>
+      <!-- Navbar -->
       <nav>
         <ul>
           <li>
@@ -25,6 +25,7 @@
         </ul>
       </nav>
     </header>
+    <!-- Main section -->
     <div class="hero"></div>
     <main>
       <section class="content">
@@ -35,6 +36,7 @@
           <img
             src="assets/images/search-engine-optimization.jpg"
             class="float-left"
+            alt="notebook on the table"
           />
           <h2>Search Engine Optimization</h2>
           <p>
@@ -51,6 +53,7 @@
           <img
             src="assets/images/online-reputation-management.jpg"
             class="float-right"
+            alt="laptop on the table"
           />
           <h2>Online Reputation Management</h2>
           <p>
@@ -65,6 +68,7 @@
           <img
             src="assets/images/social-media-marketing.jpg"
             class="float-left"
+            alt="brainstorming ideas around the table"
           />
           <h2>Social Media Marketing</h2>
           <p>
@@ -75,12 +79,13 @@
           </p>
         </section>
       </section>
-      <section class="benefits">
+      <!-- Aside section on th right -->
+      <aside class="benefits">
         <article class="benefit-lead">
           <h3>Lead Generation</h3>
           <img
             src="assets/images/lead-generation.png"
-            alt="lead-generation funnel"
+            alt="lead-generation funnel icon"
           />
           <p>
             Inbound strategies for lead generation require less work for your
@@ -89,7 +94,10 @@
         </article>
         <article class="benefit-brand">
           <h3>Brand Awareness</h3>
-          <img src="assets/images/brand-awareness.png" alt="brand-awareness" />
+          <img
+            src="assets/images/brand-awareness.png"
+            alt="brand-awareness icon"
+          />
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -97,15 +105,18 @@
         </article>
         <article class="benefit-cost">
           <h3>Cost Management</h3>
-          <img src="assets/images/cost-management.png" alt="cost-management" />
+          <img
+            src="assets/images/cost-management.png"
+            alt="cost-management icon"
+          />
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
           </p>
         </article>
-      </section>
+      </aside>
     </main>
-
+    <!-- Footer -->
     <footer>
       <h3>Made with ❤️️ by Horiseon</h3>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
