--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
+    <!-- Link to style sheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Horiseon</title>
   </head>
